--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -9,7 +9,7 @@
             "command": "g++",
             "args": [
                 "-g", 
-                "${workspaceFolder}/C++/Learning/binder.cpp",
+                "${workspaceFolder}/C++/Learning/WritingUTF8.cpp",
                 "-o",
                 "${file}.exe"
             ],
