修改C++的vscode配置文件

--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -9,7 +9,7 @@
             "command": "g++",
             "args": [
                 "-g", 
-                "${workspaceFolder}/C++/Learning/binder.cpp",
+                "${workspaceFolder}/C++/Learning/FileIO.cpp",
                 "-o",
                 "${file}.exe"
             ],
