--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -44,8 +44,15 @@
       "list": "cpp",
       "functional": "cpp"
     },
+    "C_Cpp.intelliSenseEngineFallback": "Enabled",
     // Whether to run code in Integrated Terminal.
-  "code-runner.runInTerminal": true,
+    "code-runner.runInTerminal": true,
     // Whether to ignore selection to always run entire file.
-  "code-runner.ignoreSelection": true
+    "code-runner.ignoreSelection": true,
+
+    "code-runner.executorMap": {
+      "cpp":  "cd $dir && g++  $fileName  -o $fileNameWithoutExt.exe && ./$fileNameWithoutExt.exe",
+      "c":  "cd $dir && g++  $fileName  -o $fileNameWithoutExt.exe && ./$fileNameWithoutExt.exe",
+      "java": "cd $dir && javac -encoding utf-8 $fileName && java $fileNameWithoutExt"
+}
 }
